# DGtalCGAL

./: 3dLocalEstimators.cpp  CMakeLists.txt  LinearLeastSquareFittingNormalVectorEstimator.h  MongeJetFittingCurvatureEstimator.h  MongeJetFittingCurvatureEstimator.ih  MongeJetFittingGaussianCurvatureEstimator.h  MongeJetFittingMeanCurvatureEstimator.h  MongeJetFittingNormalVectorEstimator.h  implicitToPCL.cpp  multigrid.sh  statisticsEstimators.cpp  testLocalEstimatorFromFunctorAdapter.cpp  testMonge.cpp
